# analyzers-baseline-testing

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yml
src/analyzers_baseline/config/: __init__.py  settings_loader.py
src/analyzers_baseline/patterns/: structural_pattern_analyzer.py
src/analyzers_baseline/patterns/detectors/: proximity_detector.py
src/analyzers_baseline/pipeline/: baseline.py
src/analyzers_baseline/scripts/: run_features.py  run_patterns.py  run_pipeline.py
src/chainswarm_analyzers_baseline/adapters/: clickhouse.py
src/chainswarm_analyzers_baseline/features/: address_feature_analyzer.py
src/chainswarm_analyzers_baseline/graph/: builder.py
src/chainswarm_analyzers_baseline/patterns/: structural_pattern_analyzer.py
src/chainswarm_analyzers_baseline/patterns/detectors/: burst_detector.py  motif_detector.py  network_detector.py
src/chainswarm_analyzers_baseline/pipeline/: baseline.py
src/chainswarm_analyzers_baseline/protocols/: models.py
src/chainswarm_analyzers_baseline/scripts/: run_pipeline.py
